# tiny-AES-c-OMP

./: CMakeLists.txt  aes.c  main.c
